--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -1,20 +1,8 @@
 [
 	{
-		"name": "Email.ML",
-		"description": "Minimalist temporary Email.",
-		"image": "/assets/images/projects/email.ml.png",
-		"url": "https://email.ml"
-	},
-	{
-		"name": "DNS.Surf",
-		"description": "Querying DNS Resolution Results in Different Regions Worldwide.",
-		"image": "/assets/images/projects/dns.surf.png",
-		"url": "https://dns.surf"
-	},
-	{
-		"name": "HTML.ZONE",
-		"description": "Web Toolbox.",
-		"image": "/assets/images/projects/html.zone.png",
-		"url": "https://html.zone"
+		"name": "50 Problems",
+		"description": "Top 50 user generated problems for engineers.",
+		"image": "/assets/images/projects/50-problems.png",
+		"url": "https://50problems.ricoputra.dev"
 	}
 ]
